LU-3231 fld: fix previous range copy in fld_cache_lookup()

In fld_cache_lookup() when returning the previous seq range, copy the
appropriate part of the previous fld_cache_entry.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Iabc1146e5c5ac188c8d37c953ffbb645450e070d
Reviewed-on: http://review.whamcloud.com/6171
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>